# chatbot-pytorch-nltk

./: README.md  pyproject.toml
chatbot/: app.py  chat.py  data.pth  dataset.py  model.py  nltk_utils.py  train.py
chatbot/static/: app.js
chatbot/templates/: base.html
